test/tests/compiler/5_local_variables/valid/extra_credit/bitwise_shiftl_variable.plx
pub fn main(none) i32 {
    x: i32 = 3
    return x << 3
}
