test/tests/compiler/5_local_variables/invalid_semantics/invalid_lvalue_2.plx
pub fn main(none) i32 {
    a: i32 = 2
    not a = 3
    return a
}
